data/derived/comb/progs/unify/prog7866.ml.out
Characters 87-89:
  | Sine e1 -> sin(pi*.(eval e1 x y))
                             ^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
